Flexbox worksheet completed + removed fontsize from stitching to fix spacing

--- a/styles/index.css
+++ b/styles/index.css
@@ -52,7 +52,7 @@ h3 {
     transform: rotate(-45deg);
     width:54px;
     color: white;
-    font-size: large;
+    /* font-size: large; */
     text-decoration:line-through;
     text-decoration-thickness: 7px;
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
